# AstramChain

./: .gitignore  Cargo.toml  README.md  SECURITY.md  build-all-releases.ps1  build-release.ps1  build-release.sh  docker-compose.yml
astram-dns/: Cargo.toml  check-dns.sh  nginx-explorer-updated.conf  nginx-pool.conf
astram-dns/src/: main.rs
astram-stratum/: Cargo.toml  pool.conf
astram-stratum/scripts/linux/: start-mining-pool.sh
astram-stratum/scripts/windows/: pool-mining.ps1  start-mining-pool.bat
astram-stratum/src/: main.rs  payout.rs  session.rs  share_validator.rs  shares.rs  vardiff.rs
astram-stratum/web/: index.html
astram-stratum/web/public/: index.html  robots.txt
astram-stratum/web/public/.well-known/: security.txt
astram-stratum/web/public/downloads/: start-mining-linux.sh  start-mining-windows.bat
chrome-wallet/: README.md  manifest.json  package.json  tsconfig.json  vite.config.ts
chrome-wallet/src/: App.css  App.tsx  popup.html  side-panel.html  side-panel.tsx
chrome-wallet/src/background/: service-worker.ts
chrome-wallet/src/components/: CreateWallet.tsx  GetStarted.tsx  ImportWallet.tsx  TxApproval.tsx  UnlockWallet.tsx  WalletHome.tsx
chrome-wallet/src/content/: content-script.ts
chrome-wallet/src/i18n/: index.ts
chrome-wallet/src/i18n/locales/: en.ts  es.ts  ja.ts  ko.ts  zh.ts
chrome-wallet/src/inject/: inject.js
chrome-wallet/src/store/: wallet.ts
chrome-wallet/src/styles/: CreateWallet.css  GetStarted.css  ImportWallet.css  TxApproval.css  UnlockWallet.css  WalletHome.css
chrome-wallet/src/types/: index.ts
chrome-wallet/src/utils/: crypto.ts  ed25519-mnemonic.ts  mnemonic.ts  transaction.ts
config/: Cargo.toml
config/src/: config.rs
core/: Cargo.toml  build.rs
core/src/: checkpoint.rs  config.rs  lib.rs  security.rs  utxo.rs
core/src/block/: mod.rs
core/src/blockchain/: mod.rs
core/src/consensus/: cuda.rs  dag.rs  mod.rs
core/src/consensus/cuda/: miner.cu
core/src/crypto/: eth.rs  mod.rs
core/src/db/: mod.rs
core/src/network/: mod.rs
core/src/rpc/: mod.rs
core/src/transaction/: mod.rs
core/src/wallet/: mod.rs
docs/: architecture.md  dapp-rpc-reference.md  design.md  index.md  kawpow-blake3-pow.md  mining-performance-guide.md  security.md  whitepaper.md
explorer/: Cargo.toml  build.rs
explorer/config/: explorerSettings.conf
explorer/src/: api.rs  db.rs  handlers.rs  main.rs  rpc.rs  state.rs
explorer/web/src/: App.vue
explorer/web/src/api/: explorer.js
explorer/web/src/router/: index.js
explorer/web/src/views/: Address.vue  BlockDetail.vue  Blocks.vue  Home.vue  NodeStatus.vue  Richlist.vue  TransactionDetail.vue  Transactions.vue
miner/: Cargo.toml
miner/config/: minerSettings.conf
miner/src/: main.rs
miner/web/: index.html
netcoin-dns/: Cargo.toml  README.md
netcoin-dns/src/: main.rs
netcoin-stratum/: Cargo.toml
netcoin-stratum/src/: main.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs
node/src/p2p/: manager.rs  messages.rs  mod.rs  peer.rs  service.rs
node/src/server/: eth_rpc.rs  mod.rs
node/web/: README.md  dashboard.html
tools/: recover-tip.ps1
wallet-cli/: Cargo.toml
wallet-cli/src/: commands.rs  main.rs  wallet.rs
