[package]
name = "netcoin-core"
version = "0.1.0"
edition = "2024"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
bincode = "1.3"
rocksdb = "0.20.1"
anyhow = "1.0"
thiserror = "1.0"
ed25519-dalek = "1.0"    # 서명/검증 (간단하고 안전)