[package]
name = "Astram-miner"
version = "1.0.10"
edition = "2024"

[dependencies]
Astram-core = { path = "../core" }
astram-config = { path = "../config" }
anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
primitive-types = { version = "0.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
bincode = "2.0.1"
dirs = "5.0"
shellexpand = "3.1"

[features]
default = ["cuda-miner"]
cuda-miner = ["Astram-core/cuda-miner"]
