[package]
name = "netcoin-node"
version = "0.1.0"
edition = "2024"

[dependencies]
netcoin-core = { path = "../core" }
netcoin-config = { path = "../config" }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
chrono = { version = "0.4", features = ["serde"] }