[package]
name = "wallet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
netcoin-config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
ed25519-dalek = "2.2.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sha2 = "0.10.9"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
bs58 = "0.4"   # Base58 인코딩/디코딩
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1"